monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0112/A0112b.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0112;

grammar A0112b {

  Foo = "foo";

  interface Bar = "bar";

  interface Bar = "foo";

}
